# variant2

./: .drone.jsonnet  .drone.star  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam  index.html
.drone/: drone.sh
.github/workflows/: ci.yml
benchmark/: benchmark1.cpp  benchmark1.md
doc/: Jamfile  expected.md  variant.adoc  variant2.adoc
doc/html/: variant2.html
doc/variant/: copyright.adoc  overview.adoc  reference.adoc
doc/variant2/: changelog.adoc  design.adoc  implementation.adoc  overview.adoc  reference.adoc
include/boost/variant2/: expected.hpp  outcome.hpp  result.hpp  variant.hpp
meta/: libraries.json
test/: CMakeLists.txt  Jamfile  get_by_index.cpp  get_by_index_cx.cpp  is_output_streamable.cpp  throw_exception.cpp  variant_alternative.cpp  variant_convert_construct.cpp  variant_convert_construct_throw.cpp  variant_copy_assign.cpp  variant_copy_assign_cx.cpp  variant_copy_assign_throw.cpp  variant_copy_construct.cpp  variant_copy_construct_cx.cpp  variant_copy_construct_throw.cpp  variant_default_construct.cpp  variant_default_construct_cx_3.cpp  variant_default_construct_cx_4.cpp  variant_default_construct_cx_5.cpp  variant_emplace_index.cpp  variant_emplace_index_cx.cpp  variant_emplace_type.cpp  variant_emplace_type_cx.cpp  variant_eq_ne.cpp  variant_gcc_false_positive.cpp  variant_get_by_index.cpp  variant_get_by_type.cpp  variant_get_by_type_cx.cpp  variant_hash.cpp  variant_holds_alternative_cx.cpp  variant_in_place_index_construct.cpp  variant_in_place_index_construct_cx.cpp  variant_in_place_type_construct.cpp  variant_in_place_type_construct_cx.cpp  variant_index_type.cpp  variant_issue_55.cpp  variant_lt_gt.cpp  variant_many_types.cpp  variant_move_assign.cpp  variant_move_assign_cx.cpp  (+14 more)
test/cmake_subdir_test/: quick.cpp
